# mars-rover-tdd

./: .gitignore  README.md  TASK.md  docker-compose.dev.yml  package-lock.json  package.json  playwright.config.ts  rules.md  tests.md
backend-node/: Dockerfile  (+3 more)
python-django/: .env  Dockerfile  manage.py  pyproject.toml  requirements.txt
python-django/api/: settings.py  urls.py
python-django/api/rover/: views.py
python-django/apps/api/: settings.py  urls.py
python-django/apps/api/rover/: apps.py  views.py
python-django/apps/commands/: __init__.py
python-django/apps/selery/: __init__.py
python-django/domains/panel/: event_handlers.py
python-django/domains/rover/: entities.py  event_handlers.py  events.py  gateways.py  managers.py  repositories.py  use_cases.py
python-django/domains/shared/: entities.py
python-django/infra/gateways/: redis.py
python-django/infra/rover/: gateways.py  managers.py  repositories.py
python-django/infra/shared/: repositories.py
python-django/tests/integration/apps_commands/: conftest.py
python-django/tests/integration/infra_rove_managers/: test_mars_rover_http_manager.py  test_mars_rover_manager.py
python-django/tests/integration/infra_rover_managers/: test_mars_rover_http_manager.py  test_mars_rover_manager.py
python-django/tests/integration/infra_rover_repositories/: test_rover_position_redis_repo.py
python-django/tests/unit/domain_rover_use_cases/: test_move_forcast_use_case.py  test_process_commands_use_case.py
python-django/tests/unit/domains_rover_entities/: test_command_list.py  test_position.py
(+57 files in other folders)
